logs/cybak.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/config_handle-0.3.0.egg-info'...
Compiling './lib/python3.5/site-packages/config_handler.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (config_handler.py, line 11)
Listing './lib/python3.5/site-packages/cybak-0.5.0.egg-info'...
Listing './lib/python3.5/site-packages/dirwalker'...
Compiling './lib/python3.5/site-packages/menu_generator.py'...
***   File "./lib/python3.5/site-packages/menu_generator.py", line 53
    print "\n", header, "\n", "="*len(header)
             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/menugen-0.1.0.egg-info'...
Listing './lib/python3.5/site-packages/pash-1.1.2.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/termcolor-1.1.0.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
